--- a/package.json
+++ b/package.json
@@ -3,29 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn install && next",
+    "dev": "npm i && next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.7.0",
-    "axios": "^1.8.4",
-    "framer-motion": "^12.8.0",
-    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.1"
+    "next": "15.1.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "typescript": "^5.8.3"
+    "@eslint/eslintrc": "^3"
   }
 }
