--- a/package.json
+++ b/package.json
@@ -3,26 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn install && next",
+    "dev": "npm i && next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.2"
+    "react-dom": "^19.0.0",
+    "next": "15.1.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/axios": "^0.14.4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19.1.2",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
